# wost-toy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat  exe.ps1  execute.bat  openqmc_sobol_backend.patch  openqmc_sobol_backend_from_head.patch  openqmc_sobol_backend_from_head_lf.patch
build-openqmc/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mixed_boundary_benchmark.vcxproj  mixed_boundary_benchmark.vcxproj.filters  wost_toy.sln
build-simple/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mixed_boundary_benchmark.vcxproj  mixed_boundary_benchmark.vcxproj.filters  wost_toy.sln
experiments/: mixed_boundary_benchmark.cpp
include/wost_toy/: cli.hpp  config.hpp  domain_mixed_strip.hpp  math.hpp  qmc.hpp  rng.hpp  samplers.hpp  solver.hpp  state_keys.hpp  stats.hpp  walker.hpp
results/block-size-sweep/: summary_block_1024_x065_M512.csv  summary_block_128_x065_M512.csv  summary_block_256_x065_M512.csv  summary_block_32_x065_M512.csv  summary_block_512_x065_M512.csv  summary_block_64_x065_M512.csv  trials_block_1024_x065_M512.csv  trials_block_128_x065_M512.csv  trials_block_256_x065_M512.csv  trials_block_32_x065_M512.csv  trials_block_512_x065_M512.csv  trials_block_64_x065_M512.csv
results/openqmc_sobol_bucketed_key_sweep/: summary_openqmc_B16_D1.csv  summary_openqmc_B16_D2.csv  summary_openqmc_B16_D4.csv  summary_openqmc_B16_D8.csv  summary_openqmc_B32_D1.csv  summary_openqmc_B32_D2.csv  summary_openqmc_B32_D4.csv  summary_openqmc_B32_D8.csv  summary_openqmc_B64_D1.csv  summary_openqmc_B64_D2.csv  summary_openqmc_B64_D4.csv  summary_openqmc_B64_D8.csv  summary_openqmc_B8_D1.csv  summary_openqmc_B8_D2.csv  summary_openqmc_B8_D4.csv  summary_openqmc_B8_D8.csv  trials_openqmc_B16_D1.csv  trials_openqmc_B16_D2.csv  trials_openqmc_B16_D4.csv  trials_openqmc_B16_D8.csv  trials_openqmc_B32_D1.csv  trials_openqmc_B32_D2.csv  trials_openqmc_B32_D4.csv  trials_openqmc_B32_D8.csv  trials_openqmc_B64_D1.csv  trials_openqmc_B64_D2.csv  trials_openqmc_B64_D4.csv  trials_openqmc_B64_D8.csv  trials_openqmc_B8_D1.csv  trials_openqmc_B8_D2.csv  trials_openqmc_B8_D4.csv  trials_openqmc_B8_D8.csv
results/test3/: summary_phasebins_16_x065_M512.csv  summary_phasebins_32_x065_M512.csv  summary_phasebins_4_x065_M512.csv  summary_phasebins_64_x065_M512.csv  summary_phasebins_8_x065_M512.csv  trials_phasebins_16_x065_M512.csv  (+4 more)
scripts/: plot_results.py  run_phase2.ps1  run_phase2.sh
(+36 files in other folders)
